--- a/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
+++ b/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Application\CleanArch.Application.csproj" />
     <ProjectReference Include="..\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
   </ItemGroup>
 
